# practices

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  pra_version.h.in
funcs/: CMakeLists.txt  pra_bits.c  pra_boolean.c  pra_bytes.c  pra_types.c  pra_version.c
includes/: pra_bits.h  pra_bits_ec.h  pra_boolean.h  pra_boolean_types.h  pra_bytes.h  pra_bytes_ec.h  pra_bytes_types.h  pra_crc.h  pra_crc16.h  pra_crc16_types.h  pra_crc32.h  pra_crc32_types.h  pra_crc8.h  pra_crc8_types.h  pra_crc_ec.h  pra_defs.h  pra_ec.h  pra_fifo.h  pra_fifo_ec.h  pra_fifo_types.h  pra_lifo.h  pra_lifo_ec.h  pra_lifo_types.h  pra_list.h  pra_list_ec.h  pra_list_types.h  pra_math.h  pra_math_gcd.h  pra_num_defs.h  pra_stp_cycle.h  pra_stp_cycle_ec.h  pra_task.h  pra_task_ec.h  pra_task_types.h  pra_timer.h  pra_timer_ec.h  pra_timer_types.h  pra_types.h  pra_types_def.h  pra_version.h  (+1 more)
mods/: CMakeLists.txt  pra_version.c
mods/bits/: pra_bits.c  pra_bits_internal.c  pra_bits_internal.h
mods/boolean/: pra_boolean.c
mods/bytes/: pra_bytes.c  pra_bytes_internal.c  pra_bytes_internal.h
mods/crc/: pra_crc16.c  pra_crc16_internal.c  pra_crc16_internal.h  pra_crc32.c  pra_crc32_internal.c  pra_crc32_internal.h  pra_crc8.c  pra_crc8_internal.c  pra_crc8_internal.h
mods/fifo/: pra_fifo.c  pra_fifo_internal.c  pra_fifo_internal.h  pra_lifo.c
mods/lifo/: pra_lifo.c  pra_lifo_internal.c  pra_lifo_internal.h
mods/list/: pra_list.c  pra_list_internal.c  pra_list_internal.h
mods/math/: pra_math.c  pra_math_gcd.c  pra_math_gcd_internal.h
mods/stepper/: pra_stp_cycle.c  pra_stp_cycle_internal.c  pra_stp_cycle_internal.h
mods/task/: pra_task.c  pra_task_internal.c  pra_task_internal.h
mods/timer/: pra_timer.c  pra_timer_internal.c  pra_timer_internal.h
tests/: CMakeLists.txt  test.h  test_bit_is_actived.c  test_bits_u16_get.c  test_bits_u16_set.c  test_bits_u32_get.c  test_bits_u8_get.c  test_bits_u8_set.c  test_boolean_and.c  test_boolean_is_true.c  test_boolean_not.c  test_boolean_or.c  test_boolean_xor.c  test_bytes_append.c  test_bytes_append_u16.c  test_bytes_append_u32.c  test_bytes_append_u8.c  test_bytes_append_u8_array.c  test_bytes_copy.c  test_bytes_init.c  test_bytes_not_null_ptr.c  test_crc16.c  test_crc16_arc.c  test_crc16_ccitt_false.c  test_crc16_dnp.c  test_crc16_maxim.c  test_crc16_usb.c  test_crc16_x25.c  test_crc32.c  test_crc32.h  test_crc32_jamcrc.c  test_crc32_posix.c  test_crc8.c  test_crc8.h  test_crc8_cdma2000.c  test_crc8_default.c  test_crc8_itu.c  test_crc8_rohc.c  test_fifo_append_u16.c  test_fifo_append_u16_be.c  (+9 more)
tests/bits/: CMakeLists.txt  test_bits_u16_get.c  test_bits_u16_set.c  test_bits_u32_get.c  test_bits_u32_set.c  test_bits_u8_get.c  test_bits_u8_set.c
tests/boolean/: CMakeLists.txt  test_boolean_and.c  test_boolean_is_true.c  test_boolean_not.c  test_boolean_or.c  test_boolean_xor.c
tests/bytes/: CMakeLists.txt  test_bytes_append.c  test_bytes_append_u16.c  test_bytes_append_u32.c  test_bytes_append_u8.c  test_bytes_append_u8_array.c  test_bytes_copy.c  test_bytes_init.c  test_bytes_not_null_ptr.c
tests/crc16/: CMakeLists.txt  test_crc16.c  test_crc16.h  test_crc16_arc.c  test_crc16_ccitt_false.c  test_crc16_dnp.c  test_crc16_maxim.c  test_crc16_modbus.c  test_crc16_usb.c  test_crc16_x25.c  test_crc16_xmodem.c
tests/crc32/: CMakeLists.txt  test_crc32.c  test_crc32.h  test_crc32_bzip2.c  test_crc32_default.c  test_crc32_jamcrc.c  test_crc32_mpeg2.c  test_crc32_posix.c
tests/crc8/: CMakeLists.txt  test_crc8.c  test_crc8.h  test_crc8_cdma2000.c  test_crc8_default.c  test_crc8_itu.c  test_crc8_maxim.c  test_crc8_rohc.c  test_crc8_wcdma.c
tests/fifo/: CMakeLists.txt  test_fifo_append_u16.c  test_fifo_append_u16.h  test_fifo_append_u16_be.c  test_fifo_append_u16_le.c  test_fifo_append_u32.c  test_fifo_append_u32.h  test_fifo_append_u32_be.c  test_fifo_append_u32_le.c  test_fifo_append_u8.c  test_fifo_init.c  test_fifo_take_u16.c  test_fifo_take_u16.h  test_fifo_take_u16_be.c  test_fifo_take_u16_le.c  test_fifo_take_u32.c  test_fifo_take_u32.h  test_fifo_take_u32_be.c  test_fifo_take_u8.c
tests/lifo/: CMakeLists.txt  test_lifo_init.c  test_lifo_pop_u16.c  test_lifo_pop_u16.h  test_lifo_pop_u16_be.c  test_lifo_pop_u16_le.c  test_lifo_pop_u32.c  test_lifo_pop_u32.h  test_lifo_pop_u32_be.c  test_lifo_pop_u32_le.c  test_lifo_pop_u8.c  test_lifo_push_u16.c  test_lifo_push_u16.h  test_lifo_push_u16_be.c  test_lifo_push_u16_le.c  test_lifo_push_u32.c  test_lifo_push_u32.h  test_lifo_push_u32_be.c  test_lifo_push_u32_le.c  test_lifo_push_u8.c
tests/list/: CMakeLists.txt  test_list_append.c  test_list_init.c  test_list_insert.c  test_list_remove.c
tests/math/: CMakeLists.txt  test_math_gcd_euclid.c  test_math_is_coprime.c
tests/stepper/: CMakeLists.txt  test_stp_cycle_default_u16.c  test_stp_cycle_default_u32.c  test_stp_cycle_default_u8.c  test_stp_cycle_max_u8.c  test_stp_cycle_u16.c  test_stp_cycle_u32.c  test_stp_cycle_u8.c
tests/task/: CMakeLists.txt  test_task_add.c  test_task_init.c  test_task_remove.c
tests/timer/: CMakeLists.txt  test_timer_get_time.c  test_timer_init.c  test_timer_is_done.c  test_timer_start.c  test_timer_stop.c
