project(practices_test VERSION 0.1.0)

include_directories(
    ./includes
)

add_executable(test_boolean_is_true test_boolean_is_true.c)
target_link_libraries(test_boolean_is_true practices)
add_test(NAME test_boolean_is_true COMMAND test_boolean_is_true)

add_executable(test_boolean_not test_boolean_not.c)
target_link_libraries(test_boolean_not practices)
add_test(NAME test_boolean_not COMMAND test_boolean_not)

add_executable(test_boolean_and test_boolean_and.c)
target_link_libraries(test_boolean_and practices)
add_test(NAME test_boolean_and COMMAND test_boolean_and)

add_executable(test_boolean_or test_boolean_or.c)
target_link_libraries(test_boolean_or practices)
add_test(NAME test_boolean_or COMMAND test_boolean_or)

add_executable(test_boolean_xor test_boolean_xor.c)
target_link_libraries(test_boolean_xor practices)
add_test(NAME test_boolean_xor COMMAND test_boolean_xor)

add_executable(test_bytes_not_null_ptr test_bytes_not_null_ptr.c)
target_link_libraries(test_bytes_not_null_ptr practices)
add_test(NAME test_bytes_not_null_ptr COMMAND test_bytes_not_null_ptr)

add_executable(test_bytes_init test_bytes_init.c)
target_link_libraries(test_bytes_init practices)
add_test(NAME test_bytes_init COMMAND test_bytes_init)

add_executable(test_bytes_copy test_bytes_copy.c)
target_link_libraries(test_bytes_copy practices)
add_test(NAME test_bytes_copy COMMAND test_bytes_copy)

add_executable(test_bytes_append_u8_array test_bytes_append_u8_array.c)
target_link_libraries(test_bytes_append_u8_array practices)
add_test(NAME test_bytes_append_u8_array COMMAND test_bytes_append_u8_array)

add_executable(test_bytes_append test_bytes_append.c)
target_link_libraries(test_bytes_append practices)
add_test(NAME test_bytes_append COMMAND test_bytes_append)

add_executable(test_bytes_append_u8 test_bytes_append_u8.c)
target_link_libraries(test_bytes_append_u8 practices)
add_test(NAME test_bytes_append_u8 COMMAND test_bytes_append_u8)

add_executable(test_bytes_append_u16 test_bytes_append_u16.c)
target_link_libraries(test_bytes_append_u16 practices)
add_test(NAME test_bytes_append_u16 COMMAND test_bytes_append_u16)

add_executable(test_bytes_append_u32 test_bytes_append_u32.c)
target_link_libraries(test_bytes_append_u32 practices)
add_test(NAME test_bytes_append_u32 COMMAND test_bytes_append_u32)

add_executable(test_bits_u8_get test_bits_u8_get.c)
target_link_libraries(test_bits_u8_get practices)
add_test(NAME test_bits_u8_get COMMAND test_bits_u8_get)

add_executable(test_bits_u8_set test_bits_u8_set.c)
target_link_libraries(test_bits_u8_set practices)
add_test(NAME test_bits_u8_set COMMAND test_bits_u8_set)

add_executable(test_bits_u16_get test_bits_u16_get.c)
target_link_libraries(test_bits_u16_get practices)
add_test(NAME test_bits_u16_get COMMAND test_bits_u16_get)

add_executable(test_bits_u16_set test_bits_u16_set.c)
target_link_libraries(test_bits_u16_set practices)
add_test(NAME test_bits_u16_set COMMAND test_bits_u16_set)

add_executable(test_bits_u32_get test_bits_u32_get.c)
target_link_libraries(test_bits_u32_get practices)
add_test(NAME test_bits_u32_get COMMAND test_bits_u32_get)

add_executable(test_bits_u32_set test_bits_u32_set.c)
target_link_libraries(test_bits_u32_set practices)
add_test(NAME test_bits_u32_set COMMAND test_bits_u32_set)